# rnnoise_16k

./: CMakeLists.txt
bak/vad_postprocess/: backend_mnn.cpp  backend_rnnvad_postprocess.h  backend_rnnvad_utils.cpp  backend_rnnvad_utils.h
include/: rnnoise.h
samples/: rnnoise_sample.c  rnnvad_postprocess_sample.cpp  rnnvad_postprocess_stream_sample.cpp  rnnvad_sample.c
src/: compile.sh  denoise.c_bk
tools/: rnnoise_weight_dump.c  rnnoise_weight_to_txt.c
tools/rnnvad/x86_64/: librnnvad.a_release
training/: bin2hdf5.py  dump_rnn.py  rnn_train_16k_test.py  run.sh
training_new/: README.md  requirements.txt  train.py
training_new/common/: model_utils.py  utils.py
training_new/rnnoise/: data.py  loss.py  model.py
training_new/tools/dataset_converter/: srt_to_txt.py  whisper_to_srt.py
training_new/tools/evaluation/: denoise_eval.py  model_statistics.py  vad_eval.py  zipenhancer_denoise.py
training_new/tools/model_converter/: keras_to_c.py  keras_to_onnx.py  txt_to_keras.py
training_new/torch/: requirements.txt  train.py
training_new/torch/common/: model_utils.py
training_new/torch/rnnoise/: data.py  gru_sparsifier.py  model.py
training_new/torch/tools/evaluation/: model_statistics.py  onnx_statistics.py
training_new/torch/tools/model_converter/: dump_rnnoise_weights.py  export.py
